--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -3,8 +3,8 @@ FROM nginx:alpine
 # Copiar archivos estáticos
 COPY . /usr/share/nginx/html
 
-# Copiar configuración de nginx desde la carpeta nginx
-COPY ../nginx/nginx.conf /etc/nginx/conf.d/default.conf
+# Copiar configuración de nginx
+COPY nginx.conf /etc/nginx/conf.d/default.conf
 
 # Exponer puerto
 EXPOSE 80
