--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -1,12 +1,13 @@
 FROM nginx:alpine
 
-# Copiar archivos estáticos
-COPY . /usr/share/nginx/html
+# Copiar todos los archivos del frontend al directorio correcto de nginx
+COPY . /usr/share/nginx/html/
 
-# Copiar configuración de nginx
+# Copiar configuración de nginx si existe
 COPY nginx.conf /etc/nginx/conf.d/default.conf
 
-# Exponer puerto
+# Exponer puerto 80
 EXPOSE 80
 
+# Comando por defecto
 CMD ["nginx", "-g", "daemon off;"]
