--- a/frontend/nginx.conf
+++ b/frontend/nginx.conf
@@ -1,25 +1,34 @@
 server {
     listen 80;
     server_name localhost;
+    
+    # Directorio raíz donde están los archivos
+    root /usr/share/nginx/html;
+    index index.html index.htm;
 
+    # Configuración para servir archivos estáticos
     location / {
-        root /usr/share/nginx/html;
-        index index.html index.htm;
         try_files $uri $uri/ /index.html;
     }
 
-    # Proxy para API del backend
+    # Configuración específica para archivos JavaScript y CSS
+    location ~* \.(js|css)$ {
+        add_header Cache-Control "public, max-age=31536000";
+        try_files $uri =404;
+    }
+
+    # Configuración para imágenes y otros activos
+    location ~* \.(png|jpg|jpeg|gif|ico|svg)$ {
+        add_header Cache-Control "public, max-age=31536000";
+        try_files $uri =404;
+    }
+
+    # Proxy para el backend API
     location /api/ {
-        proxy_pass http://benpo_siata_backend:5000/api/;
+        proxy_pass http://backend:5000/api/;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
-    }
-
-    # Configuración para archivos estáticos
-    location ~* \.(js|css|png|jpg|jpeg|gif|ico|svg)$ {
-        expires 1y;
-        add_header Cache-Control "public, immutable";
     }
 }
